src/deployments/deployment.yaml
---
### TEMPLATE FOR A SERVICE AND DEPLOYMENT ON KUBERNETES just substitute the next keywords with your own values
### mp-vue-employe-search     : the name of your application or container image
### v4.6.0 : the version of the app image to deploy
### ghcr.io/lao-tseu-is-alive  : the prefix to your images in your container registry
apiVersion: v1
kind: Namespace
metadata:
  name: test-mp-employe-search
  labels:
    env: test
    app: mp-employe-search
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp-employe-search-ingress
  namespace: test-mp-employe-search
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: employe.localdev.me
      http:
        paths:
          - path: /search(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mp-employe-search-service
                port:
                  number: 8000
